# shell-lab1

./: CMakeLists.txt  README.md
scripts/: combined_starter.sh  dedup_starter.sh  io_lat_read_starter.sh
solution/: CMakeLists.txt
solution/include/combined-benchmark/: combined.h
solution/include/dedup/: dedup.h
solution/include/io-lat-read/: array_generator.h  io_lat_read.h
solution/include/shell/: built_in_commands.h  external_commands.h
solution/src/: main.c
solution/src/combined-benchmark/: combined.c
solution/src/dedup/: dedup.c
solution/src/io-lat-read/: array_generator.c  io_lat_read.c  tools.c
solution/src/shell/: built_in_commands.c  external_commands.c  shell.c  tools.c
tester/: dedup_test1.sh  io_lat_read_test1.sh  io_lat_read_test2.sh
